# LangTube

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
data/: deletions.json  index.json
data/agent-tasks/: en-elon-musk-a-different-conversation-peopl-mrfs0a9q.json  en-elon-musk-a-different-conversation-peopl-mrgb0xmi.json  en-housecard-s1e1-mress4zj.json  en-newsroom-e01-mreio9wr.json  en-newsroom-e01-mrejdcz5.json  en-newsroom-e01-mrelpc5e.json  en-untitled-mrdnfqbg.json  en-untitled-mrdrc63s.json  en-untitled-mreimlyu.json  es--c-mo-ligar-en-espa-ol-easy-spanish-188-mrlsye3z.json  es--easy-spanish-w1-d1-how-will-technology--mrg98juw.json  es-coco-mreifx8a.json  es-coco-mreki0bj.json  es-coco-mrekk0xm.json  es-coco-mrekpzbz.json  es-coco-mrel3v4w.json  es-coco-mrfrv0it.json  es-coco-mrfvsfsp.json  es-untitled-mrekeo0j.json  ja---mripmgp1.json  ja---mripney9.json  ja-untitled-mrd56jnr.json  ja-untitled-mrdmhend.json  ja-untitled-mrdmzmj2.json  ja-untitled-mrdnf0ar.json  ja-untitled-mrdoma5c.json  ja-untitled-mrdppty9.json  ja-untitled-mrdqlmju.json  ja-untitled-mrdrajd9.json  ja-untitled-mrhunnt8.json  ja-俺-話-長-01-mrehoi9z.json  (+4 more)
docker/: Dockerfile  docker-compose.yml
schemas/: content-pack.schema.json
scripts/: ensure-deps.mjs  generate-tauri-icons.mjs  merge-fragmented-transcripts.cjs
(+239 files in other folders)
